SERVER-49827 [SBE] Fix latent bug in ExpressionPostVisitor causing a failure in "sanity.js"